--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,14 +1,13 @@
 name: CI for Application
 
 on:
-    workflow_dispatch:
-      pull_request:
-        branches: [ "main" ]
+  pull_request:
+    branches: [main]
 
  
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
