--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,3 @@
-name: workflow
-
 on:
   pull_request:
     branches: [main]
@@ -9,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      mysql:
+      postgres:
         image: postgres:latest
         env:
-          MYSQL_ROOT_PASSWORD: "admin123"
-          MYSQL_DATABASE: "assignment1_db"
-          MYSQL_ROOT_HOST: "%"
+          POSTGRES_USER: "postgres"
+          POSTGRES_PASSWORD: "admin123"
+          POSTGRES_DB: "assignment1_db"
         ports:
           - 5432:5432
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
