--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,9 +10,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: "postgres"
           POSTGRES_PASSWORD: "admin123"
           POSTGRES_DB: "assignment1_db"
+          POSTGRES_ROOT_HOST: "%"
         ports:
           - 5432:5432
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
