--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,3 +1,5 @@
+name: workflow
+
 on:
   pull_request:
     branches: [main]
@@ -12,7 +14,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: "admin123"
           POSTGRES_DB: "assignment1_db"
-          POSTGRES_ROOT_HOST: "%"
+          POSTGRES_USER: "%"
         ports:
           - 5432:5432
         options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
