--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,9 +12,9 @@ jobs:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_ROOT_PASSWORD: "admin123"
-          MYSQL_DATABASE: "assignment1_db"
-          MYSQL_ROOT_HOST: "%"
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+          MYSQL_ROOT_HOST: ${{ secrets.MYSQL_ROOT_HOST }}
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -31,12 +31,12 @@ jobs:
       - name: create and configure
         run: |
           touch .env
-          echo port=8080 >> .env
-          echo host=localhost >> .env
-          echo dialect=mysql >> .env
-          echo user=root >> .env
-          echo password=admin123 >> .env
-          echo database=assignment1_db >> .env
+          echo port=${{ secrets.PORT }} >> .env
+          echo host=${{ secrets.HOST }} >> .env
+          echo dialect=${{ secrets.DIALECT }} >> .env
+          echo user=${{ secrets.USER }} >> .env
+          echo password=${{ secrets.PASSWORD }} >> .env
+          echo database=${{ secrets.DATABASE }} >> .env
 
       - name: Install dependencies
         run: npm install
