--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,15 +28,15 @@ jobs:
         with:
           node-version: 18
 
-      # - name: create and configure
-      #   run: |
-      #     touch .env
-      #     echo port=${{ secrets.PORT }} >> .env
-      #     echo host=${{ secrets.HOST }} >> .env
-      #     echo dialect=${{ secrets.DIALECT }} >> .env
-      #     echo user=${{ secrets.USER }} >> .env
-      #     echo password=${{ secrets.PASSWORD }} >> .env
-      #     echo database=${{ secrets.DATABASE }} >> .env
+      - name: create and configure
+        run: |
+          touch .env
+          echo port=${{ secrets.PORT }} >> .env
+          echo host=${{ secrets.HOST }} >> .env
+          echo dialect=${{ secrets.DIALECT }} >> .env
+          echo user=${{ secrets.USER }} >> .env
+          echo password=${{ secrets.PASSWORD }} >> .env
+          echo database=${{ secrets.DATABASE }} >> .env
 
       - name: Install dependencies
         run: npm install
