--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "webapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "mocha --exit __tests__/*.js",
+    "test": "mocha --exit _tests_/*.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,15 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "chai": "^4.3.10",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
-    "mocha": "^10.2.0",
     "mysql2": "^3.6.1",
-    "pg": "^8.11.3",
     "sequelize": "^6.33.0",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.10",
+    "mocha": "^9.2.2",
+    "sequelize-cli": "^6.6.1"
   }
 }
