--- a/.github/workflows/ami_workflow.yml
+++ b/.github/workflows/ami_workflow.yml
@@ -1,8 +1,8 @@
 name: Packer AMI
 
 on:
-  workflow_run:
-    workflows: [assignment5]  # Replace with the name of your workflow
+  push:
+    branches: [assignment5]  # Replace with the name of your workflow
 
 jobs:
   connect-remote:
