--- a/.github/workflows/validate_workflow.yml
+++ b/.github/workflows/validate_workflow.yml
@@ -3,7 +3,7 @@ name: Packer validate
 on:
   pull_request:
     branches:
-      [main]  # adjust to your main branch name
+      [main]  
 
 jobs:
   connect-remote:
