--- a/.github/workflows/ami_workflow.yml
+++ b/.github/workflows/ami_workflow.yml
@@ -47,11 +47,4 @@ jobs:
         run: packer init .
 
       - name: Run Packer file
-        run: |
-          export PORT=${{ secrets.PORT }}
-          export HOST=${{ secrets.HOST }}
-          export DIALECT=${{ secrets.DIALECT }}
-          export USER=${{ secrets.USER }}
-          export PD=${{ secrets.PASSWORD }}
-          export DATABASE=${{ secrets.DATABASE }}
-          packer build -var 'USER=${{ secrets.USER }}' -var 'DATABASE=${{ secrets.DATABASE }}' -var 'PASSWORD=${{ secrets.PASSWORD }}' -var-file="variables.pkr.hcl" aws-debian.pkr.hcl
+        run: packer build -var 'USER=${{ secrets.USER }}' -var 'DATABASE=${{ secrets.DATABASE }}' -var 'PASSWORD=${{ secrets.PASSWORD }}' -var-file="variables.pkr.hcl" aws-debian.pkr.hcl
