--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,8 @@ name: MySQL Integration Test
 on:
   pull_request:
     branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   connect-remote:
@@ -27,7 +29,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18
-          
+
       - name: create and configure
         run: |
           touch .env
