--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "chai": "^4.3.10",
