--- a/.github/workflows/ami_workflow.yml
+++ b/.github/workflows/ami_workflow.yml
@@ -33,8 +33,20 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Run Packer plugin installation
-        run: packer init .
+        run: packer init ./aws-debian.pkr.hcl
 
       - name: Run Packer file
         run: packer build -var-file="variables.pkrvars.hcl" aws-debian.pkr.hcl
 
+      - name: Get latest AMI ID
+        id: ami
+        run: |
+          echo "::set-output name=ami_id::$(aws ec2 describe-images --filters 'Name=name,Values=csye6225*' --query 'Images[0].ImageId' --output text)"
+ 
+      - name: Create Launch Template
+        run: |
+          aws ec2 create-launch-template-version --launch-template-name ${{ secrets.LAUNCH_TEMPLATE }} --source-version 1 --launch-template-data '{"ImageId":"${{ steps.ami.outputs.ami_id }}"}'
+ 
+      - name: Refresh autoscaling group
+        run: |
+          aws autoscaling start-instance-refresh --auto-scaling-group-name ${{ secrets.AUTOSCALING_GROUP }}
