--- a/.github/workflows/ami_workflow.yml
+++ b/.github/workflows/ami_workflow.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: zip all files
+        run: zip -r webapp.zip .
+
       - name: Install Packer
         run: |
           wget https://releases.hashicorp.com/packer/1.7.2/packer_1.7.2_linux_amd64.zip
@@ -20,10 +23,6 @@ jobs:
           chmod +x packer
           sudo mv packer /usr/local/bin/
           packer version
-
-
-      - name: zip all files
-        run: zip -r webapp.zip .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -43,6 +42,13 @@ jobs:
         run: |
           echo "::set-output name=ami_id::$(aws ec2 describe-images --filters 'Name=name,Values=csye6225*' --query 'Images[0].ImageId' --output text)"
  
+       - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.DEMO_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEMO_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.DEMO_AWS_REGION }}
+ 
       - name: Create Launch Template
         run: |
           aws ec2 create-launch-template-version --launch-template-name ${{ secrets.LAUNCH_TEMPLATE }} --source-version 1 --launch-template-data '{"ImageId":"${{ steps.ami.outputs.ami_id }}"}'
@@ -50,3 +56,12 @@ jobs:
       - name: Refresh autoscaling group
         run: |
           aws autoscaling start-instance-refresh --auto-scaling-group-name ${{ secrets.AUTOSCALING_GROUP }}
+          status=""
+          while [[ $status != "Successful" && $status != "Failed" ]]; do
+            status=$(aws autoscaling describe-instance-refreshes --auto-scaling-group-name ${{ secrets.AUTOSCALING_GROUP }} --query 'InstanceRefreshes[0].Status' --output text)
+          done
+          echo "Instance refresh status: $status"
+          if [ $status == "Failed" ]; then
+            echo "Instance refresh failed. Exiting with an error."
+            exit 1
+          fi
